[gd_scene load_steps=5 format=3 uid="uid://bo5aiheasph7x"]

[ext_resource type="SpriteFrames" uid="uid://chkmsedr3os2m" path="res://resources/cat_sprite_frames.tres" id="1_oybkb"]
[ext_resource type="Script" path="res://scripts/cat.gd" id="1_swwu4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jj3bg"]
radius = 7.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xlkah"]
radius = 32.0
height = 168.0

[node name="Cat" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 2
floor_stop_on_slope = false
floor_constant_speed = true
floor_block_on_wall = false
script = ExtResource("1_swwu4")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -7)
sprite_frames = ExtResource("1_oybkb")
animation = &"run"
frame_progress = 0.167947
offset = Vector2(0, -9)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_jj3bg")

[node name="SpookArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpookArea"]
position = Vector2(0, -7)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_xlkah")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -7)
scale = Vector2(7.1, 3)

[node name="AutoMoveTimer" type="Timer" parent="."]
wait_time = 30.0

[connection signal="body_entered" from="SpookArea" to="." method="_on_spook_area_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="AutoMoveTimer" to="." method="_on_auto_move_timer_timeout"]
